# dsproject

./: .env  .gitignore  README.md  bootstrap.py  console.py  database.py  krispbroadcaster.py  requirements.txt
rpc/: cli.py  entrypoint.sh  pyproject.toml
rpc/config/: production.yaml  production.yaml.sample
rpc/rpc/: console.py  main.py  settings.py
salesapi/: README.md  cli.py  entrypoint.sh  pyproject.toml
salesapi/config/: production.yaml
salesapi/salesapi/: console.py  main.py  middlewares.py  pd_worker.py  rpc_worker.py  settings.py
salesapi/tests/: conftest.py  pytest.ini
salesapi/tests/tests_billing/: conftest.py
salesapi/tests/tests_billing/tests_campaign_call/: test_campaign_call_billing.py  test_campaign_call_billing_v2.py
salesapi/tests/tests_billing/utils/: campaign_utils.py  constant.py  models.py  test_data.py
salesapi/tests/tests_bulksms/tests_entrypoint/: test_add_bulksms_contact_detail.py  test_add_bulksms_template.py  test_create_bulksms_campaigns.py  test_create_bulksms_contact_list.py  test_default_bulksms_template.py  test_delete_bulksms_contact_detail.py  test_delete_bulksms_template.py  test_get_bulksms_campaigns.py  test_get_bulksms_contact_detail_list.py  test_get_bulksms_contact_list.py  test_get_bulksms_template.py  test_rename_bulksms_contact_list.py  test_update_bulksms_campaigns.py  test_update_bulksms_template.py
salesapi/tests/tests_bulksms/tests_services/: test_add_bulksms_contact_detail.py  test_add_bulksms_contact_detail_csv.py  (+10 more)
salesapi/tests/tests_konference/: test_requires_auth_power_dialer.py
webapi/: cli.py  (+3 more)
(+27 files in other folders)
