[tool.poetry]
name = "krisprpc"
version = "0.1.0"
description = "RPC api for the krispcall core components"
authors = ["parz3val <iamtheparzival@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.3.1"
aioredis = "1.3.1"
uvloop = "^0.14.0"
pytest = "^6.2.4"

krispcall-common = "^0.5.0"
krispcall-components = "^0.5.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
